--- a/portal.html
+++ b/portal.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portal</title>
+<script>
+window.onload = function() {
+  var context = new AudioContext();
+}
+</script>
+<title>Portal</title>
 </head>
 <body>
 
-<!-- Displaying a GIF -->
 <img src="portal.gif" alt="GIF" width="300" height="200">
-
-<!-- Autoplaying an MP3 file on loop -->
+  
 <audio controls autoplay loop>
   <source src="portal.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
