--- a/portal.html
+++ b/portal.html
@@ -9,6 +9,7 @@ function musicPlay() {
 }
 </script>
 <title>Portal</title>
+<link rel="stylesheet" type="text/css" href="portal.css">
 </head>
 <body>
 
