Fix GIF scaling

--- a/portal.html
+++ b/portal.html
@@ -13,7 +13,7 @@ function musicPlay() {
 </head>
 <body>
 
-<img src="portal.gif" alt="GIF" width="300" height="200">
+<img src="portal.gif" alt="GIF" class="GIF">
   
 <audio controls autoplay loop id="portal">
   <source src="portal.mp3" type="audio/mpeg">
