--- a/portal.html
+++ b/portal.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
+  <title>Portal</title>
+  <link rel="stylesheet" type="text/css" href="portal.css">
+  <script>
 document.addEventListener('click', musicPlay);
 function musicPlay() {
     document.getElementById('portal').play();
     document.removeEventListener('click', musicPlay);
 }
-</script>
-<title>Portal</title>
-<link rel="stylesheet" type="text/css" href="portal.css">
+  </script>
 </head>
 <body>
 
-<img src="portal.gif" alt="GIF" class="GIF">
-  
-<audio controls autoplay loop id="portal">
-  <source src="portal.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+<div class="content-container">
+  <div class="gif-container">
+    <img src="portal.gif" alt="GIF" class="gif">
+  </div>
+
+  <div class="audio-container">
+    <audio controls autoplay loop id="portal">
+      <source src="portal.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+</div>
 
 </body>
 </html>
